# HOUSE-PRICES

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  environment.yml  myst.yml  pyproject.toml  requirements.txt
data/processed/: dtype_dict.json  test.csv  train.csv
notebooks/: 00-Projet-Kaggle-Lecture-et-nettoyage.ipynb  04-Projet-Kaggle-Présentation-Storytelling.ipynb
src/utilities/: 00-presentation.md
