[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = ""
authors = ["Guillaume Poirier <guillaume.poirier1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
absl-py = "2.1.0"
annotated-types = "0.7.0"
attrs = "24.2.0"
bleach = "6.1.0"
bokeh = "3.6.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
catboost = "1.2.7"
category-encoders = "2.6.4"
certifi = "2024.8.30"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
clarabel = "0.9.0"
cleo = "2.1.0"
click = "8.1.7"
cloudpickle = "3.0.0"
contourpy = "1.3.0"
crashtest = "0.4.1"
cvxpy = "1.5.3"
cycler = "0.12.1"
dacite = "1.8.1"
dash = "2.18.1"
dash-bootstrap-components = "1.6.0"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
dash-daq = "0.5.0"
dash-renderer = "1.8.3"
distlib = "0.3.9"
dulwich = "0.21.7"
ecos = "2.0.14"
fastjsonschema = "2.20.0"
filelock = "3.16.1"
flask = "2.2.5"
fonttools = "4.54.0"
graphviz = "0.20.3"
htmlmin = "0.1.12"
identify = "2.6.3"
idna = "3.10"
imagehash = "4.3.1"
immutabledict = "4.2.0"
installer = "0.7.0"
ipywidgets = "8.1.5"
itsdangerous = "2.2.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
joblib = "1.4.2"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
jupyter-bokeh = "4.0.5"
jupyterlab-widgets = "3.0.13"
keyring = "24.3.1"
kiwisolver = "1.4.7"
linkify-it-py = "2.0.3"
llvmlite = "0.43.0"
markdown = "3.7"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.9.2"
mdit-py-plugins = "0.4.2"
mdurl = "0.1.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multimethod = "1.12"
nbformat = "5.10.4"
networkx = "3.3"
nodeenv = "1.9.1"
numba = "0.60.0"
numpy = "1.26.4"
optbinning = "0.19.0"
ortools = "9.11.4210"
osqp = "0.6.7.post1"
pandas = "2.2.2"
panel = "1.5.2"
param = "2.1.1"
patsy = "0.5.6"
pexpect = "4.9.0"
phik = "0.12.4"
pillow = "10.4.0"
pkginfo = "1.12.0"
plotly = "5.24.1"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
pre-commit = "4.0.1"
protobuf = "5.26.1"
ptyprocess = "0.7.0"
pydantic = "2.9.2"
pydantic-core = "2.23.4"
pyparsing = "3.1.4"
pyproject-hooks = "1.2.0"
pytz = "2024.2"
pyviz-comms = "3.0.3"
pywavelets = "1.7.0"
pywin32-ctypes = "0.2.3"
pyyaml = "6.0.2"
qdldl = "0.1.7.post4"
rapidfuzz = "3.11.0"
referencing = "0.35.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
retrying = "1.3.4"
ropwr = "1.0.0"
rpds-py = "0.20.0"
ruff = "0.6.7"
scikit-learn = "1.5.2"
scipy = "1.13.1"
scs = "3.2.7"
seaborn = "0.13.2"
setuptools = "72.1.0"
shap = "0.46.0"
shellingham = "1.5.4"
slicer = "0.0.8"
statsmodels = "0.14.3"
tenacity = "9.0.0"
threadpoolctl = "3.5.0"
tomlkit = "0.13.2"
tqdm = "4.66.5"
trove-classifiers = "2024.10.21.16"
typeguard = "4.3.0"
tzdata = "2024.1"
uc-micro-py = "1.0.3"
urllib3 = "2.2.3"
virtualenv = "20.28.0"
visions = "0.7.6"
webencodings = "0.5.1"
werkzeug = "3.0.4"
wheel = "0.44.0"
widgetsnbextension = "4.0.13"
wordcloud = "1.9.3"
xyzservices = "2024.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
